examples/test_package/Double_dc_full/steps/benchzebra_precise_run1/#test_analysis_3_result.txt
### Evaluation Report: Zebra Puzzle in ProbLog

---

#### **1. Document Title**
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the correct arrangement of houses based on a set of given constraints. This report evaluates the implementation of the puzzle in ProbLog, focusing on logical correctness, test results, and adherence to the specified requirements.

---

#### **3. Test Results Summary**
The provided code fails during execution with the following error:
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Failed Queries:**
- The query `member/2` fails because the predicate `member` is not defined in the provided code. The error occurs at line 4.

---

#### **4. Failure Localization**
- **Failed Predicate:** `member/2`
  - **Location:** Line 4 of the code.
  - **Issue:** The predicate `member` is used but not defined. The code relies on `member` to check if a house with specific attributes exists in the list of houses.
  - **Expected:** The `member` predicate should be defined to traverse the list of houses and match the given attributes.
  - **Actual:** The predicate is missing, causing the evaluation to fail.

---

#### **5. Root Cause Analysis**
- **Logical Correctness:** The logic of the puzzle is sound, but the implementation is incomplete due to the missing `member` predicate.
- **Recursive Termination:** The recursive predicates `right_of/3` and `next_to/3` are correctly defined and should terminate properly.
- **Probabilistic Context:** The code does not involve probabilistic facts or DeepProbLog features, so no probabilistic rules are violated.
- **DeepProbLog:** Not used in this implementation.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The logic is correct, but the missing `member` predicate prevents full functionality.
  - **Probabilistic Reasoning:** Not applicable here.
  - **Neural Network Integration:** Not used.
- **Edge Cases:**
  - The code assumes the input is a list of 5 houses, but there is no validation for non-list inputs or lists of incorrect length.
  - The recursive predicates (`right_of/3`, `next_to/3`) could face performance issues with very large lists, but this is not relevant for the Zebra Puzzle.

---

#### **7. Error Summary**

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|---------------------------------|-------------------------------------|
| 1      | Missing `member/2` predicate     | Code fails to execute           | Define the `member/2` predicate.    |
| 2      | No input validation              | Potential runtime errors        | Add checks for input format/length. |

---

#### **8. Suggested Fix**
To resolve the issue, add the following definition for the `member/2` predicate:
```prolog
member(X, [X | _]).
member(X, [_ | Tail]) :- member(X, Tail).
```

This will allow the code to traverse the list of houses and match the given attributes as required by the puzzle constraints.

---

#### **9. Conclusion**
The Zebra Puzzle implementation is logically sound but incomplete due to the missing `member` predicate. Once this predicate is added, the code should execute correctly and solve the puzzle as intended. No probabilistic or DeepProbLog features are involved in this implementation.